kubedev/ingress/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
        - name: api
          image: kubedevio/nginx-color:blue
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  type: NodePort
  selector:
    type: blue
  ports:
    - port: 80
      targetPort: 80
