kubedev/ingress/deployment.green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
        - name: api
          image: kubedevio/nginx-color:green
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  type: LoadBalancer
  selector:
    type: green
  ports:
    - port: 80
      targetPort: 80
